k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-backend
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: rails-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-backend
spec:
  selector:
    matchLabels:
      app: rails-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: rails-backend
    spec:
      containers:
        - name: rails-backend
          image: suzukey/pf-sakumon-backend
          ports:
            - containerPort: 3000
