k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-frontend
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: nuxt-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt-frontend
spec:
  selector:
    matchLabels:
      app: nuxt-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: nuxt-frontend
    spec:
      containers:
        - name: nuxt-frontend
          image: suzukey/pf-sakumon-frontend
          ports:
            - containerPort: 3000
