k8s/web-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-test
  labels:
    run: my-nginx
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    run: my-nginx
