k8s/ingress.dev.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # それぞれのserviceに接続した際'/~'にアクセスする
    nginx.ingress.kubernetes.io/rewrite-target: /
    # トレイリングスラッシュをなしで統一
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/(.*)/$ /$1 redirect;
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - sakumon.localhost
      secretName: selfsigned-cert-tls
  rules:
    - host: sakumon.localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: nuxt-frontend
              servicePort: 3000
          - path: /api($|/.+)
            backend:
              serviceName: rails-backend
              servicePort: 3000
