k8s/ingress.prod.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # トレイリングスラッシュをなしで統一
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/(.*)/$ /$1 redirect;
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
spec:
  rules:
    - host: portfolio.sakumon.me
      http:
        paths:
          - path: /
            backend:
              serviceName: nuxt-frontend
              servicePort: 3000
          - path: /(api|rails)
            backend:
              serviceName: rails-backend
              servicePort: 3000
